<resources>
    <string name="app_name">Tikum Coffee</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="go_to_sign_in">I already have an account, go to Sign In</string>
    <string name="terms_conditions">Terms and Conditions Agreement</string>
    <string name="go_login">Already has an account? Login here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    
    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 (Max)</item>
    </string-array>
</resources>